# proctab

./: .gitattributes  .gitignore  FREQ_API.md  HTML_RENDERER.md  README.md  ROADMAP.md  TABLE_MODEL.md  TABULATE_API.md  pyproject.toml
.claude/: settings.json
.github/workflows/: ci.yml
docs/: EXCEL_RENDERER.md  FREQ_API.md  HTML_RENDERER.md  ProcTabulate.md  TABLE_MODEL.md  TABULATE_API.md  VISION.md
src/legible/: __init__.py  _categories.py  _engine.py  examples.py  freq.py  model.py  tabulate.py
src/legible/render/: __init__.py  text.py
src/proctab/: __init__.py  _categories.py  _engine.py  _export.py  examples.py  freq.py  model.py  tabulate.py
src/proctab/render/: __init__.py  excel.py  html.py  text.py
tests/: conftest.py  test_engine.py  test_examples.py  test_excel_render.py  test_export.py  test_freq.py  test_freq_aggregate.py  test_freq_axes.py  test_freq_edge_cases.py  test_freq_integration.py  test_freq_percent.py  test_freq_spec.py  test_html_render.py  test_model.py  test_tabulate.py  test_tabulate_aggregate.py  test_tabulate_assemble.py  test_tabulate_axes.py  test_tabulate_edge_cases.py  test_tabulate_integration.py  test_tabulate_spec.py  test_tabulate_stats.py  test_tabulate_totals.py
