[project]
name = "proctab"
version = "0.0.1"
description = "Executive-ready summary tables and crosstabs from business data."
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "narwhals>=1.0",
]

[project.optional-dependencies]
excel = [
    "openpyxl>=3.1",
]
dev = [
    "pytest>=7",
    "pandas>=2.0",
    "polars>=1.0",
    "openpyxl>=3.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/proctab"]

[tool.pytest.ini_options]
testpaths = ["tests"]
